--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </div>
             </div>
             <div class="menu__item">
-                <a class="menu__item-link" href="https://linktr.ee/RoCars?fbclid=PAZXh0bgNhZW0CMTEAAacLQkl1R5H2G2HQfqFaH-VVSzs5B541x-8dZM6tS5_rxJldbcZGOVa8CvJQ_w_aem_sklR1mA9uSDX-zrleeXgZA" target="_blank">CONTACT</a>
+                <a class="menu__item-link" href="./Contact-Form/index.html" target="_blank">Get In Touch</a>
                 <div class="marquee">
                   <div class="marquee__inner-wrap">
                    <div class="marquee__inner" aria-hidden="true">
