--- a/Contact-Form/index.html
+++ b/Contact-Form/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ROCARS | Get In Touch</title>
+    <link rel="shortcut icon" href="../assets/RoCars.png">
     <link rel="stylesheet" href="CT/styles.css"/>
   </head>
   <body>
