--- a/Contact-Form/thankyou.html
+++ b/Contact-Form/thankyou.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Thank You</title>
+  <link rel="shortcut icon" href="../assets/RoCars.png">
   <style>
     a {text-decoration: none; color: #111;}
     @font-face{font-family:'LEMONMILK-Regular'; src:url('../../assets/LEMONMILK-Regular.otf') format('opentype');font-display:swap;}
