--- a/Contact-Form/index.html
+++ b/Contact-Form/index.html
@@ -64,21 +64,21 @@
           <div class="jobs">
             <div class="job-items">
               <div class="item">
-                <input type="checkbox" id="inq-sales" name="inquiries" value="Sales" />
+                <input type="checkbox" id="inq-sales" name="inquiries" value="Sales" class="custom-checkbox" />
                 <label for="inq-sales">Sales</label>
               </div>
               <div class="item">
-                <input type="checkbox" id="inq-video" name="inquiries" value="Videography" />
+                <input type="checkbox" id="inq-video" name="inquiries" value="Videography" class="custom-checkbox" />
                 <label for="inq-video">Videography</label>
               </div>
             </div>
             <div class="job-items">
               <div class="item">
-                <input type="checkbox" id="inq-cars" name="inquiries" value="Cars" />
+                <input type="checkbox" id="inq-cars" name="inquiries" value="Cars" class="custom-checkbox" />
                 <label for="inq-cars">Cars</label>
               </div>
               <div class="item">
-                <input type="checkbox" id="inq-other" name="inquiries" value="Other" />
+                <input type="checkbox" id="inq-other" name="inquiries" value="Other" class="custom-checkbox" />
                 <label for="inq-other">Other</label>
               </div>
             </div>
