--- a/cars/index.html
+++ b/cars/index.html
@@ -23,55 +23,72 @@
 			</div>
 			<div class="content">
 				<div class="block" data-fx="12">
-					<a class="block__title" href="https://youtu.be/MG4AAcV9Pc0?si=9aA0hkWPzPBltV5u" target="_blank" data-img="https://img.youtube.com/vi/MG4AAcV9Pc0/hqdefault.jpg">Lamborghini Huracan EVO by ZACOE</a>
+					<div class="block__title" data-img="https://img.youtube.com/vi/MG4AAcV9Pc0/hqdefault.jpg">Lamborghini Huracan EVO by ZACOE</div>
+					<a class="PLAY" href="https://youtu.be/MG4AAcV9Pc0?si=9aA0hkWPzPBltV5u" target="_blank">PLAY</a>
 				</div>
 				<div class="block" data-fx="12">
-					<a class="block__title" href="https://youtu.be/lYAKWdyo4dM?si=OQCAab2Z9BMmefFE" target="_blank" data-img="https://img.youtube.com/vi/lYAKWdyo4dM/hqdefault.jpg">2025 Mercedes BRABUS 930 S 63 AMG</a>
+					<a class="block__title" data-img="https://img.youtube.com/vi/lYAKWdyo4dM/hqdefault.jpg">2025 Mercedes BRABUS 930 S 63 AMG</a>
+					<a class="PLAY" href="https://youtu.be/lYAKWdyo4dM?si=OQCAab2Z9BMmefFE" target="_blank">PLAY</a>
 				</div>
 				<div class="block" data-fx="12">
-					<a class="block__title" href="https://youtu.be/DjfN0Bp90ZA?si=VHNyY0GgUSTvAEbP" target="_blank" data-img="https://img.youtube.com/vi/DjfN0Bp90ZA/hqdefault.jpg">2025 Audi S6 Sportback</a>
+					<a class="block__title" data-img="https://img.youtube.com/vi/DjfN0Bp90ZA/hqdefault.jpg">2025 Audi S6 Sportback</a>
+					<a class="PLAY" href="https://youtu.be/DjfN0Bp90ZA?si=VHNyY0GgUSTvAEbP" target="_blank">PLAY</a>
 				</div>
 				<div class="block" data-fx="12">
-					<a class="block__title" href="https://youtu.be/iO65hYAOVWU?si=UqyMXhc3Fg5B2dCv" target="_blank" data-img="https://img.youtube.com/vi/iO65hYAOVWU/hqdefault.jpg">2024 Rolls-Royce Phantom EWB Diamond Edition</a>
+					<a class="block__title" data-img="https://img.youtube.com/vi/iO65hYAOVWU/hqdefault.jpg">2024 Rolls-Royce Phantom EWB Diamond Edition</a>
+					<a class="PLAY" href="https://youtu.be/iO65hYAOVWU?si=UqyMXhc3Fg5B2dCv" target="_blank">PLAY</a>
 				</div>
 				<div class="block" data-fx="12">
-					<a class="block__title" href="https://youtu.be/Qm-qakcnx4M?si=vTl4V3j8mkjS6Ls1" target="_blank" data-img="https://img.youtube.com/vi/Qm-qakcnx4M/hqdefault.jpg">2025 Mercedes-AMG E 53</a>
+					<a class="block__title" data-img="https://img.youtube.com/vi/Qm-qakcnx4M/hqdefault.jpg">2025 Mercedes-AMG E 53</a>
+					<a class="PLAY" href="https://youtu.be/Qm-qakcnx4M?si=vTl4V3j8mkjS6Ls1" target="_blank">PLAY</a>
 				</div>
 				<div class="block" data-fx="12">
-					<a class="block__title" href="https://youtu.be/uyPguAfw-rg?si=j7-znnhf-dzyBWqq" target="_blank" data-img="https://img.youtube.com/vi/uyPguAfw-rg/hqdefault.jpg">2025 Audi Q6</a>
+					<a class="block__title" data-img="https://img.youtube.com/vi/uyPguAfw-rg/hqdefault.jpg">2025 Audi Q6</a>
+					<a class="PLAY" href="https://youtu.be/uyPguAfw-rg?si=j7-znnhf-dzyBWqq" target="_blank">PLAY</a>
 				</div>
 				<div class="block" data-fx="12">
-					<a class="block__title" href="https://youtu.be/WDxTZ2Y0Dmc?si=xD7rmrNmbLogWfB8" target="_blank" data-img="https://img.youtube.com/vi/WDxTZ2Y0Dmc/hqdefault.jpg">2025 BMW M5</a>
+					<a class="block__title" data-img="https://img.youtube.com/vi/WDxTZ2Y0Dmc/hqdefault.jpg">2025 BMW M5</a>
+					<a class="PLAY" href="https://youtu.be/WDxTZ2Y0Dmc?si=xD7rmrNmbLogWfB8" target="_blank">PLAY</a>
 				</div>
 				<div class="block" data-fx="12">
-					<a class="block__title" href="https://youtu.be/fFb9zztOV7c?si=h1JJrKDgCkJJcxza" target="_blank" data-img="https://img.youtube.com/vi/fFb9zztOV7c/hqdefault.jpg">2025 Audi RS Q8 Performance</a>
+					<a class="block__title" data-img="https://img.youtube.com/vi/fFb9zztOV7c/hqdefault.jpg">2025 Audi RS Q8 Performance</a>
+					<a class="PLAY" href="https://youtu.be/fFb9zztOV7c?si=h1JJrKDgCkJJcxza" target="_blank">PLAY</a>
 				</div>
 				<div class="block" data-fx="12">
-					<a class="block__title" href="https://youtu.be/4YO8qB6cVeY?si=D-E1FdDq4U682mA4" target="_blank" data-img="https://img.youtube.com/vi/4YO8qB6cVeY/hqdefault.jpg">2025 Audi RS E-Tron GT Performance</a>
+					<a class="block__title" data-img="https://img.youtube.com/vi/4YO8qB6cVeY/hqdefault.jpg">2025 Audi RS E-Tron GT Performance</a>
+					<a class="PLAY" href="https://youtu.be/4YO8qB6cVeY?si=D-E1FdDq4U682mA4" target="_blank">PLAY</a>
 				</div>
 				<div class="block" data-fx="12">
-					<a class="block__title" href="https://youtu.be/DmOneaEHYvQ?si=mCG2vq-uJsPImG79" target="_blank" data-img="https://img.youtube.com/vi/DmOneaEHYvQ/hqdefault.jpg">2024 Ferrari Purosangue</a>
+					<a class="block__title" data-img="https://img.youtube.com/vi/DmOneaEHYvQ/hqdefault.jpg">2024 Ferrari Purosangue</a>
+					<a class="PLAY" href="https://youtu.be/DmOneaEHYvQ?si=mCG2vq-uJsPImG79" target="_blank">PLAY</a>
 				</div>
 				<div class="block" data-fx="12">
-					<a class="block__title" href="https://youtu.be/RBN8Wcrdgzc?si=jqYdNsDpkHlRhrz-" target="_blank" data-img="https://img.youtube.com/vi/RBN8Wcrdgzc/hqdefault.jpg">McLaren 720S RR1000</a>
+					<a class="block__title" data-img="https://img.youtube.com/vi/RBN8Wcrdgzc/hqdefault.jpg">McLaren 720S RR1000</a>
+					<a class="PLAY" href="https://youtu.be/RBN8Wcrdgzc?si=jqYdNsDpkHlRhrz-" target="_blank">PLAY</a>
 				</div>
 				<div class="block" data-fx="12">
-					<a class="block__title" href="https://youtu.be/wjyOjpn6IZk?si=E_lEjK6qt4xRK8H6" target="_blank" data-img="https://img.youtube.com/vi/wjyOjpn6IZk/hqdefault.jpg">2024 Volkswagen ID.7 GTX</a>
+					<a class="block__title" data-img="https://img.youtube.com/vi/wjyOjpn6IZk/hqdefault.jpg">2024 Volkswagen ID.7 GTX</a>
+					<a class="PLAY" href="https://youtu.be/wjyOjpn6IZk?si=E_lEjK6qt4xRK8H6" target="_blank">PLAY</a>
 				</div>
 				<div class="block" data-fx="12">
-					<a class="block__title" href="https://youtu.be/JEirkz6Cr-0?si=h25cGOU1_Pop8HHk" target="_blank" data-img="https://img.youtube.com/vi/JEirkz6Cr-0/hqdefault.jpg">€2M Mercedes-AMG G 63 G-Falcon</a>
+					<a class="block__title" data-img="https://img.youtube.com/vi/JEirkz6Cr-0/hqdefault.jpg">€2M Mercedes-AMG G 63 G-Falcon</a>
+					<a class="PLAY" href="https://youtu.be/JEirkz6Cr-0?si=h25cGOU1_Pop8HHk" target="_blank">PLAY</a>
 				</div>
 				<div class="block" data-fx="12">
-					<a class="block__title" href="https://youtu.be/xmOSb5SbRZ8?si=5PQ5df8mhEC70_-9" target="_blank" data-img="https://img.youtube.com/vi/xmOSb5SbRZ8/hqdefault.jpg">New BMW XM (2024)</a>
+					<a class="block__title" data-img="https://img.youtube.com/vi/xmOSb5SbRZ8/hqdefault.jpg">New BMW XM (2024)</a>
+					<a class="PLAY" href="https://youtu.be/xmOSb5SbRZ8?si=5PQ5df8mhEC70_-9" target="_blank">PLAY</a>
 				</div>
 				<div class="block" data-fx="12">
-					<a class="block__title" href="https://youtu.be/VkEEmbEDlLI?si=6LipJSin0jqrjqSU" target="_blank" data-img="https://img.youtube.com/vi/VkEEmbEDlLI/hqdefault.jpg">2024 Audi RS7 Legacy Edition (1000 Hp) by ABT</a>
+					<a class="block__title" data-img="https://img.youtube.com/vi/VkEEmbEDlLI/hqdefault.jpg">2024 Audi RS7 Legacy Edition (1000 Hp) by ABT</a>
+					<a class="PLAY" href="https://youtu.be/VkEEmbEDlLI?si=6LipJSin0jqrjqSU" target="_blank">PLAY</a>
 			    </div>
 				<div class="block" data-fx="12">
-					<a class="block__title" href="https://youtu.be/LyAw0NKMYas?si=H3ua4qKIe_Q5TRrt" target="_blank" data-img="https://img.youtube.com/vi/LyAw0NKMYas/hqdefault.jpg">2024 Rolls Royce Spectre</a>
+					<a class="block__title" data-img="https://img.youtube.com/vi/LyAw0NKMYas/hqdefault.jpg">2024 Rolls Royce Spectre</a>
+					<a class="PLAY" href="https://youtu.be/LyAw0NKMYas?si=H3ua4qKIe_Q5TRrt" target="_blank">PLAY</a>
 				</div>
 				<div class="block" data-fx="12">
-					<a class="block__title" href="https://youtu.be/RYHoyBhcA_A?si=OG7RLN-L8Tl5IovI" target="_blank" data-img="https://img.youtube.com/vi/RYHoyBhcA_A/hqdefault.jpg">2024 Mercedes-AMG CLE 53 Coupe</a>
+					<a class="block__title" data-img="https://img.youtube.com/vi/RYHoyBhcA_A/hqdefault.jpg">2024 Mercedes-AMG CLE 53 Coupe</a>
+					<a class="PLAY" href="https://youtu.be/RYHoyBhcA_A?si=OG7RLN-L8Tl5IovI" target="_blank">PLAY</a>
 				</div>
 			</div>
 			<footer class="footer">
@@ -93,6 +110,23 @@
 				</div>
 			</footer>
 		</main>
+
+		<svg style="display: none;">
+            <defs>
+              <filter id="pDistort">
+                <feTurbulence type="turbulence" baseFrequency="0.02" numOctaves="3" seed="2" stitchTiles="stitch" result="turb">
+                  <animate attributeName="seed" from="2" to="500" dur=".5s" repeatCount="indefinite" />
+                </feTurbulence>
+                <feDisplacementMap in="SourceGraphic" in2="turb" scale="10" xChannelSelector="R" yChannelSelector="G" />
+              </filter>
+              <filter id="pDistort-max">
+                <feTurbulence type="turbulence" baseFrequency="0.02" numOctaves="3" seed="2" stitchTiles="stitch" result="turb">
+                  <animate attributeName="seed" from="2" to="500" dur=".25s" repeatCount="indefinite" />
+                </feTurbulence>
+                <feDisplacementMap in="SourceGraphic" in2="turb" scale="33" xChannelSelector="R" yChannelSelector="G" />
+              </filter>
+            </defs>
+        </svg>
 
 		<script src="js/charming.min.js"></script>
 		<script src="js/imagesloaded.pkgd.min.js"></script>
