--- a/brands/index.html
+++ b/brands/index.html
@@ -12,7 +12,13 @@
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 	</head>
-	<body class="loading">
+	<body class="before-load">
+	    <div class="loading">
+            <div class="loading-circle">
+                  <p class="backp">BRANDS !</p>
+            </div>
+        </div>
+
 		<main>
 			<div class="text-container">
 				<div class="socials">
@@ -24,115 +30,116 @@
 			<div class="content">
 				<div class="block" data-fx="12">
 					<a class="block__title" data-img="img/1.jpg">A</a>
-					<a class="block__link" href="" data-img="img/Alfa-Romeo.webp" target="_blank">ALFA ROMEO</a>
-					<a class="block__link" href="" data-img="img/AMG.webp" target="_blank">AMG</a>
-					<a class="block__link" href="" data-img="img/Aston-Martin.webp" target="_blank">ASTON MARTIN</a>
-					<a class="block__link" href="" data-img="img/audi.webp" target="_blank">AUDI</a>
+					<a class="block__link" data-img="img/Alfa-Romeo.webp" target="_blank">ALFA ROMEO</a>
+					<a class="block__link" data-img="img/AMG.webp" target="_blank">AMG</a>
+					<a class="block__link" data-img="img/Aston-Martin.webp" target="_blank">ASTON MARTIN</a>
+					<a class="block__link" data-img="img/audi.webp" target="_blank">AUDI</a>
 				</div>
 				<div class="block" data-fx="12">
 					<a class="block__title" data-img="img/6.jpg">B</a>
-					<a class="block__link" href="" data-img="img/bentley.webp" target="_blank">BENTLEY</a>
-					<a class="block__link" href="" data-img="img/BMW.webp" target="_blank">BMW</a>
-					<a class="block__link" href="" data-img="img/BMW-M.webp" target="_blank">BMW-M</a>
-					<a class="block__link" href="" data-img="img/Brabus.webp" target="_blank">BRABUS</a>
-					<a class="block__link" href="" data-img="img/Bugatti.webp" target="_blank">BUGATTI</a>
-					<a class="block__link" href="" data-img="img/BYD.webp" target="_blank">BYD</a>
+					<a class="block__link" data-img="img/bentley.webp" target="_blank">BENTLEY</a>
+					<a class="block__link" data-img="img/BMW.webp" target="_blank">BMW</a>
+					<a class="block__link" data-img="img/BMW-M.webp" target="_blank">BMW-M</a>
+					<a class="block__link" data-img="img/Brabus.webp" target="_blank">BRABUS</a>
+					<a class="block__link" data-img="img/Bugatti.webp" target="_blank">BUGATTI</a>
+					<a class="block__link" data-img="img/BYD.webp" target="_blank">BYD</a>
 				</div>
 				<div class="block" data-fx="12">
 					<a class="block__title" data-img="img/11.jpg">C</a>
-					<a class="block__link" href="" data-img="img/cadillac.webp" target="_blank">CADILLAC</a>
-					<a class="block__link" href="" data-img="img/Chevrolet.webp" target="_blank">CHEVROLET</a>
-					<a class="block__link" href="" data-img="img/chrysler.webp" target="_blank">CHRYSLER</a>
-					<a class="block__link" href="" data-img="img/Citroen.webp" target="_blank">CITROEN</a>
+					<a class="block__link" data-img="img/cadillac.webp" target="_blank">CADILLAC</a>
+					<a class="block__link" data-img="img/Chevrolet.webp" target="_blank">CHEVROLET</a>
+					<a class="block__link" data-img="img/chrysler.webp" target="_blank">CHRYSLER</a>
+					<a class="block__link" data-img="img/Citroen.webp" target="_blank">CITROEN</a>
 				</div>
 				<div class="block" data-fx="12">
 					<a class="block__title" data-img="img/16.jpg">D</a>
-					<a class="block__link" href="" data-img="img/dodge.webp" target="_blank">DODGE</a>
+					<a class="block__link" data-img="img/dodge.webp" target="_blank">DODGE</a>
 				</div>
 				<div class="block" data-fx="12">
 					<a class="block__title" data-img="img/21.jpg">F</a>
-					<a class="block__link" href="" data-img="img/ferrari.webp" target="_blank">FERRARI</a>
-					<a class="block__link" href="" data-img="img/Fiat.webp" target="_blank">FIAT</a>
-					<a class="block__link" href="" data-img="img/ford.webp" target="_blank">FORD</a>
+					<a class="block__link" data-img="img/ferrari.webp" target="_blank">FERRARI</a>
+					<a class="block__link" data-img="img/Fiat.webp" target="_blank">FIAT</a>
+					<a class="block__link" data-img="img/ford.webp" target="_blank">FORD</a>
 				</div>
 				<div class="block" data-fx="12">
 					<a class="block__title" data-img="img/26.jpg">G</a>
-					<a class="block__link" href="" data-img="img/Geely.webp" target="_blank">GEELY</a>
-					<a class="block__link" href="" data-img="img/Genesis.webp" target="_blank">GENESIS</a>
-					<a class="block__link" href="" data-img="img/GMC.webp" target="_blank">GMC</a>
-					<a class="block__link" href="" data-img="img/GT-R.webp" target="_blank">GT-R</a>
+					<a class="block__link" data-img="img/Geely.webp" target="_blank">GEELY</a>
+					<a class="block__link" data-img="img/Genesis.webp" target="_blank">GENESIS</a>
+					<a class="block__link" data-img="img/GMC.webp" target="_blank">GMC</a>
+					<a class="block__link" data-img="img/GT-R.webp" target="_blank">GT-R</a>
 				</div>
 				<div class="block" data-fx="12">
 					<a class="block__title" data-img="img/26.jpg">H</a>
-					<a class="block__link" href="" data-img="img/honda.webp" target="_blank">HONDA</a>
-					<a class="block__link" href="" data-img="img/hyundai.webp" target="_blank">HYUNDAI</a>
+					<a class="block__link" data-img="img/honda.webp" target="_blank">HONDA</a>
+					<a class="block__link" data-img="img/hyundai.webp" target="_blank">HYUNDAI</a>
 				</div>
 				<div class="block" data-fx="12">
 					<a class="block__title" data-img="img/31.jpg">I</a>
-					<a class="block__link" href="" data-img="img/Infiniti.webp" target="_blank">INFINITI</a>
+					<a class="block__link" data-img="img/Infiniti.webp" target="_blank">INFINITI</a>
 				</div>
 				<div class="block" data-fx="12">
 					<a class="block__title" data-img="img/36.jpg">J</a>
-					<a class="block__link" href="" data-img="img/jaguar.webp" target="_blank">JAGUAR</a>
-					<a class="block__link" href="" data-img="img/jeep.webp" target="_blank">JEEP</a>
+					<a class="block__link" data-img="img/jaguar.webp" target="_blank">JAGUAR</a>
+					<a class="block__link" data-img="img/jeep.webp" target="_blank">JEEP</a>
 				</div>
 				<div class="block" data-fx="12">
 					<a class="block__title" data-img="img/41.jpg">K</a>
-					<a class="block__link" href="" data-img="img/Kia.webp" target="_blank">KIA</a>
+					<a class="block__link" data-img="img/Kia.webp" target="_blank">KIA</a>
 				</div>
 				<div class="block" data-fx="12">
 					<a class="block__title" data-img="img/4.jpg">L</a>
-					<a class="block__link" href="" data-img="img/Land-Rover.webp" target="_blank">LAND ROVER</a>
-					<a class="block__link" href="" data-img="img/Lexus.webp" target="_blank">LEXUS</a>
-					<a class="block__link" href="" data-img="img/Lotus.webp" target="_blank">LOTUS</a>
+					<a class="block__link" data-img="img/lamborghini.webp" target="_blank">LAMBORGHINI</a>
+					<a class="block__link" data-img="img/Land-Rover.webp" target="_blank">LAND ROVER</a>
+					<a class="block__link" data-img="img/Lexus.webp" target="_blank">LEXUS</a>
+					<a class="block__link" data-img="img/Lotus.webp" target="_blank">LOTUS</a>
 				</div>
 				<div class="block" data-fx="12">
 					<a class="block__title" data-img="img/9.jpg">M</a>
-					<a class="block__link" href="" data-img="img/maserati.webp" target="_blank">MASERATI</a>
-					<a class="block__link" href="" data-img="img/Maybach.webp" target="_blank">MAYBACH</a>
-					<a class="block__link" href="" data-img="img/mazda.webp" target="_blank">MAZDA</a>
-					<a class="block__link" href="" data-img="img/McLaren.webp" target="_blank">MCLAREN</a>
-					<a class="block__link" href="" data-img="img/Mercedes-Benz.webp" target="_blank">MERCEDES</a>
-					<a class="block__link" href="" data-img="img/Mini.webp" target="_blank">MINI</a>
-					<a class="block__link" href="" data-img="img/Mitsubishi.webp" target="_blank">MITSUBISHI</a>
-					<a class="block__link" href="" data-img="img/Mustang.webp" target="_blank">MUSTANG</a>
+					<a class="block__link" data-img="img/maserati.webp" target="_blank">MASERATI</a>
+					<a class="block__link" data-img="img/Maybach.webp" target="_blank">MAYBACH</a>
+					<a class="block__link" data-img="img/mazda.webp" target="_blank">MAZDA</a>
+					<a class="block__link" data-img="img/McLaren.webp" target="_blank">MCLAREN</a>
+					<a class="block__link" data-img="img/Mercedes-Benz.webp" target="_blank">MERCEDES</a>
+					<a class="block__link" data-img="img/Mini.webp" target="_blank">MINI</a>
+					<a class="block__link" data-img="img/Mitsubishi.webp" target="_blank">MITSUBISHI</a>
+					<a class="block__link" data-img="img/Mustang.webp" target="_blank">MUSTANG</a>
 				</div>
 				<div class="block" data-fx="12">
 					<a class="block__title" data-img="img/14.jpg">N</a>
-					<a class="block__link" href="" data-img="img/nissan.webp" target="_blank">NISAN</a>
+					<a class="block__link" data-img="img/nissan.webp" target="_blank">NISAN</a>
 				</div>
 				<div class="block" data-fx="12">
 					<a class="block__title" data-img="img/14.jpg">O</a>
-					<a class="block__link" href="" data-img="img/Opel.webp" target="_blank">OPEL</a>
+					<a class="block__link" data-img="img/Opel.webp" target="_blank">OPEL</a>
 				</div>
 				<div class="block" data-fx="12">
 					<a class="block__title" data-img="img/14.jpg">P</a>
-					<a class="block__link" href="" data-img="img/Peugeot.webp" target="_blank">PEUGEOT</a>
-					<a class="block__link" href="" data-img="img/porsche.webp" target="_blank">PORSCHE</a>
+					<a class="block__link" data-img="img/Peugeot.webp" target="_blank">PEUGEOT</a>
+					<a class="block__link" data-img="img/porsche.webp" target="_blank">PORSCHE</a>
 				</div>
 				<div class="block" data-fx="12">
 					<a class="block__title" data-img="img/14.jpg">R</a>
-					<a class="block__link" href="" data-img="img/RAM.webp" target="_blank">RAM</a>
-					<a class="block__link" href="" data-img="img/Renault.webp" target="_blank">RENAULT</a>
-					<a class="block__link" href="" data-img="img/Rolls-Royce.webp" target="_blank">ROLLS-ROYCE</a>
-					<a class="block__link" href="" data-img="img/Rover.webp" target="_blank">ROVER</a>
+					<a class="block__link" data-img="img/RAM.webp" target="_blank">RAM</a>
+					<a class="block__link" data-img="img/Renault.webp" target="_blank">RENAULT</a>
+					<a class="block__link" data-img="img/Rolls-Royce.webp" target="_blank">ROLLS-ROYCE</a>
+					<a class="block__link" data-img="img/Rover.webp" target="_blank">ROVER</a>
 				</div>
 				<div class="block" data-fx="12">
 					<a class="block__title" data-img="img/14.jpg">S</a>
-					<a class="block__link" href="" data-img="img/SEAT.webp" target="_blank">SEAT</a>
-					<a class="block__link" href="" data-img="img/Skoda.webp" target="_blank">SKODA</a>
-					<a class="block__link" href="" data-img="img/subaru.webp" target="_blank">SUBARU</a>
-					<a class="block__link" href="" data-img="img/Suzuki.webp" target="_blank">SUZUKI</a>
+					<a class="block__link" data-img="img/SEAT.webp" target="_blank">SEAT</a>
+					<a class="block__link" data-img="img/Skoda.webp" target="_blank">SKODA</a>
+					<a class="block__link" data-img="img/subaru.webp" target="_blank">SUBARU</a>
+					<a class="block__link" data-img="img/Suzuki.webp" target="_blank">SUZUKI</a>
 			    </div>
 				<div class="block" data-fx="12">
 					<a class="block__title" data-img="img/14.jpg">T</a>
-					<a class="block__link" href="" data-img="img/tesla.webp" target="_blank">TESLA</a>
-					<a class="block__link" href="" data-img="img/toyota.webp" target="_blank">TOYOTA</a>
+					<a class="block__link" data-img="img/tesla.webp" target="_blank">TESLA</a>
+					<a class="block__link" data-img="img/toyota.webp" target="_blank">TOYOTA</a>
 				</div>
 				<div class="block" data-fx="12">
 					<a class="block__title" data-img="img/14.jpg">V</a>
-					<a class="block__link" href="" data-img="img/Volkswagen.webp" target="_blank">VOLKSWAGEN</a>
-					<a class="block__link" href="" data-img="img/Volvo.webp" target="_blank">VOLVO</a>
+					<a class="block__link" data-img="img/Volkswagen.webp" target="_blank">VOLKSWAGEN</a>
+					<a class="block__link" data-img="img/Volvo.webp" target="_blank">VOLVO</a>
 				</div>
 			</div>
 			<footer class="footer">
@@ -154,6 +161,17 @@
 				</div>
 			</footer>
 		</main>
+
+		<svg class="max-txt" viewBox="0 0 800 400" preserveAspectRatio="xMidYMid meet">
+          <defs>
+            <filter id="minFilter">
+              <feTurbulence type="turbulence" baseFrequency="0.02" numOctaves="3" seed="2" stitchTiles="stitch" result="turbulence1">
+          	    <animate attributeName="seed" from="2" to="50" dur="10s" repeatCount="indefinite" />
+              </feTurbulence>
+              <feDisplacementMap in="SourceGraphic" in2="turbulence1" scale="10" xChannelSelector="R" yChannelSelector="G" />
+            </filter>
+          </defs>
+        </svg>
 
 		<script src="js/charming.min.js"></script>
 		<script src="js/imagesloaded.pkgd.min.js"></script>
